deploy/main/default/objects/MDParent__c/MDParent__c.object-meta.xml
<CustomObject>
    <label>MD Parent</label>
    <nameField>
        <label>MD Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Parents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>