deploy/main/default/objects/MDParent__c/fields/GrandParent__c.field-meta.xml
<CustomField>
    <fullName>GrandParent__c</fullName>
    <label>Grand Parent</label>
    <referenceTo>MDGrandParent__c</referenceTo>
    <relationshipName>Parents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>