deploy/main/default/objects/MDParent__c/fields/RSFChildren__c.field-meta.xml
<CustomField>
    <fullName>RSFChildren__c</fullName>
    <label>RSF Children</label>
    <summaryForeignKey>MDChild__c.Parent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>