deploy/main/default/objects/MDParent__c/validationRules/FINDME.validationRule-meta.xml
<ValidationRule>
    <fullName>FINDME</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>You should not see this!</errorMessage>
</ValidationRule>